gom/gom-resource.h

G_BEGIN_DECLS

#define GOM_TYPE_RESOURCE            (gom_resource_get_type())
typedef struct _GomResource        GomResource;
typedef struct _GomResourceClass   GomResourceClass;
GType             gom_resource_get_type              (void) G_GNUC_CONST;
void              gom_resource_class_set_table       (GomResourceClass *resource_class,
                                                      const gchar      *table);
void              gom_resource_class_set_primary_key (GomResourceClass *resource_class,
                                                      const gchar      *primary_key);
void              gom_resource_class_set_property_new_in_version (GomResourceClass         *resource_class,
                                                                  const gchar              *property_name,
                                                                  guint                     version);
void              gom_resource_class_set_reference               (GomResourceClass         *resource_class,
                                                                  const gchar              *property_name,
                                                                  const gchar              *ref_table_name,
                                                                  const gchar              *ref_property_name);
void              gom_resource_class_set_unique                  (GomResourceClass         *resource_class,
                                                                  const gchar              *property_name);
void              gom_resource_class_set_notnull                 (GomResourceClass         *resource_class,
                                                                  const gchar              *property_name);
void             gom_resource_set_repository_x (GomResource          *resource,
                                                GomRepository        *repository);
    
GomRepository    *gom_resource_get_repository_x (GomResource         *resource);